--- a/style.css
+++ b/style.css
@@ -1183,3 +1183,42 @@ body {
   margin: 0;
   vertical-align: middle;
 }
+
+#theme-icon {
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  width: 40px;
+  height: 40px;
+  clip-path: circle(50% at 50% 50%);
+  background: transparent;
+}
+
+#theme-icon svg {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 21px;
+  height: 21px;
+  transform: translate(-50%, -50%);
+  transition: transform 0.5s ease-out, opacity 0.5s ease-out;
+  opacity: 1;
+  will-change: transform, opacity;
+}
+
+#theme-icon:not(.dark-mode-active) .icon-sun {
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+}
+#theme-icon:not(.dark-mode-active) .icon-moon {
+  transform: translate(40px, -50%) scale(0.8);
+  opacity: 0;
+}
+#theme-icon.dark-mode-active .icon-sun {
+  transform: translate(-40px, -50%) scale(0.8);
+  opacity: 0;
+}
+#theme-icon.dark-mode-active .icon-moon {
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+}
